# hse_cpp_seminars_2021

./: .gitignore  README.md
archiver_template/: CMakeLists.txt  README.md
archiver_template/archiver/: archiver.h
archiver_template/priority_queue/: priority_queue.h
archiver_template/reader/: CMakeLists.txt  reader.cpp  reader.h
archiver_template/reader/tests/: reader_tests.cpp
archiver_template/tests/: ring_buffer_tests.cpp
archiver_template/trie/: trie.h
archiver_template/writer/: writer.h
seminar_20210909/: git_cheat_sheet.md
seminar_20210909/cpp_linking/: article.md
seminar_20210909/cpp_linking/sample_4/: CMakeLists.txt  main.cpp
seminar_20210909/ring_buffer/: CMakeLists.txt  main.cpp  ring_buffer.cpp  ring_buffer.h
seminar_20210916/auto/functions/: examples.cpp
seminar_20210916/casts/: build_and_run  examples.cpp
seminar_20210916/const/: examples.cpp
seminar_20210916/pointers_and_references/: ;  examples.cpp
seminar_20210923/structs_and_classes/: examples.cpp
seminar_20210923/templates/: build_and_run  examples.cpp  print.cpp  print.h
seminar_20210930/destructor_with_inheritance/: examples.cpp
seminar_20210930/inheritance/: build_and_run  examples.cpp  examples2.cpp  examples3.cpp
seminar_20210930/smart_pointers/: build_and_run  examples.cpp
seminar_20210930/virtual_inheritance/: binary_representation  binary_representation.cpp  build_and_run  interface_example  interface_example.cpp  ordinary_inheritance  ordinary_inheritance.cpp  virtual_inheritance  virtual_inheritance.cpp
seminar_20211014/solid/: readme.md
(+4 files in other folders)
